[package]
name = "hello_wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm =  "0.1.4"
log = "0.4.14"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
